# Wi_UAV_tx_localization

./: readMe.txt
Onboard-SDK-3.2/: CMakeLists.txt
Onboard-SDK-3.2/contrib/: DJIConfig.cmake
Onboard-SDK-3.2/osdk-core/src/: DJI_API.cpp
Onboard-SDK-3.2/osdk-wrapper/: CMakeLists.txt
Onboard-SDK-3.2/osdk-wrapper/inc/: LinuxSetup.h  ReadUserConfig.h
Onboard-SDK-3.2/osdk-wrapper/src/: LinuxFlight.cpp  LinuxSetup.cpp
Onboard-SDK-3.2/platform/linux/: CMakeLists.txt
Onboard-SDK-3.2/platform/linux/inc/: LinuxThread.h
Onboard-SDK-3.2/platform/linux/src/: LinuxSerialDevice.cpp  LinuxThread.cpp
Onboard-SDK-3.2/sample/CommandlineLinux_old/inc/: User_Config.h
Onboard-SDK-3.2/sample/Linux/Blocking/: CMakeLists.txt
Onboard-SDK-3.2/sample/Linux/Blocking/inc/: thread.h
Onboard-SDK-3.2/sample/Linux/Blocking/src/: main.cpp
Onboard-SDK-3.2/sample/Linux/Non-Blocking/: CMakeLists.txt
Onboard-SDK-3.2/sample/Linux/Non-Blocking/src/: main.cpp
Onboard-SDK-3.2/sample/PureQT/onboardSDK/: onboardSDK.pro
Onboard-SDK-3.2/sample/STM32/OnBoardSDK_STM32/User/: LocalNavigation.cpp  MobileCommand.cpp  MobileCommand.h  driver.cpp
Onboard-SDK-3.2/sensor-integration/ADSBExample/PingLib/: Ping.cpp  Ping.h
Onboard-SDK-3.2/sensor-integration/ADSBExample/PingLib/mavlink/: mavlink_conversions.h  mavlink_helpers.h
Onboard-SDK-3.2/sensor-integration/ADSBExample/PingLib/mavlink/common/: common.h  mavlink_msg_actuator_control_target.h  mavlink_msg_att_pos_mocap.h  mavlink_msg_attitude_quaternion_cov.h  mavlink_msg_attitude_target.h  mavlink_msg_battery_status.h  mavlink_msg_control_system_state.h  mavlink_msg_follow_target.h  mavlink_msg_global_position_int_cov.h  mavlink_msg_hil_state_quaternion.h  mavlink_msg_home_position.h  mavlink_msg_local_position_ned_cov.h  mavlink_msg_set_actuator_control_target.h  mavlink_msg_set_attitude_target.h  mavlink_msg_set_home_position.h  mavlink_msg_terrain_data.h  version.h
Onboard-SDK-3.2/sensor-integration/ADSBExample/PingLib/mavlink/uAvionix_ADSb/: mavlink.h  mavlink_msg_adsb_transponder_dynamic_input.h  mavlink_msg_adsb_transponder_dynamic_output.h  mavlink_msg_adsb_transponder_static_input.h  testsuite.h  uAvionix_ADSb.h  version.h
Onboard-SDK-3.2/sensor-integration/ADSBExample/Stm32PingExample/inc/: AppKey.h  DroneInterface.h  bsp.h
Onboard-SDK-3.2/sensor-integration/ADSBExample/Stm32PingExample/src/: DroneInterface.cpp  bsp.cpp
Onboard-SDK-3.2/sensor-integration/velodyne_vlp16puck_lite_API_example/pointcloud_grabber/: main.cpp
Onboard-SDK-3.2/sensor-integration/velodyne_vlp16puck_lite_API_example/sim/src/: main.cpp
Onboard-SDK-3.2/sensor-integration/velodyne_vlp16puck_lite_API_example/vlp16lidar-driver/inc/: udpDriver.h  wrapper.h
Onboard-SDK-3.2/sensor-integration/velodyne_vlp16puck_lite_API_example/vlp16lidar-driver/src/: wrapper.cpp
